@@ -18,6 +18,7 @@
     <File name="ChangeLog" subtype="Code" buildaction="Nothing" />
     <File name="DontDestroyStackTraceTest.cs" subtype="Code" buildaction="Compile" />
     <File name="AvoidArgumentExceptionDefaultConstructorTest.cs" subtype="Code" buildaction="Compile" />
+    <File name="AvoidThrowingBasicExceptionsTest.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Project" localcopy="True" refto="Gendarme.Rules.Exceptions" />
